@@ -1,5 +1,9 @@
 [b]Version 0.6.8[/b]:
 
+(2009-04-16)
+ * (Bugfix) Don't stop the file if already stopped when closing smplayer
+   to prevent that the current position would reset to 0.
+
 (2009-04-15)
  * Added two aspect ratios: 3:2 and 14:10.
  * The next_aspect action changes the aspect ratio in the right order.
